test/tests/errors/error-array-bounds-not-int.sm
// true
// false
// false
/**/
/**/

program {
    array x["a":1]: int;
}